--- a/AppInsightsTest/AppInsightsTest.csproj
+++ b/AppInsightsTest/AppInsightsTest.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net472</TargetFramework>
@@ -22,6 +22,7 @@
 	</PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ExcelDna.AddIn" Version="1.6.0" />
     <PackageReference Include="Microsoft.ApplicationInsights" Version="2.21.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.4" />
