- minor tweaks to tidy up and make the static startup code function more like the dependency injection version.

--- a/AppInsightsTest/AppInsightsTest.csproj
+++ b/AppInsightsTest/AppInsightsTest.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net472</TargetFramework>
@@ -51,10 +51,6 @@
 		  <DependentUpon>appsettings.json</DependentUpon>
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </Content>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Properties\" />
   </ItemGroup>
 
 </Project>
